--- a/app/views/template-parts/header.twig
+++ b/app/views/template-parts/header.twig
@@ -4,7 +4,7 @@
       <div class="c-nav__left flex-container align-center-middle">
         <figure class="c-brand c-brand--normal flex-container align-center-middle">
           <a class="c-brand__link" href="{{ site.url }}">
-            <img class="c-brand__image" src="{{ theme.link }}/static/images/logo.png" alt="Veterinaria Triton - Logo" />
+            <img class="c-brand__image" src="{{ theme.link }}/static/images/logo.png" alt="Panda WP - Logo" />
           </a>
         </figure>    
       </div>
