--- a/src/scss/pages/_404.scss
+++ b/src/scss/pages/_404.scss
@@ -1,7 +1,5 @@
-.c-section {
-  &--404 {
-    .c-icon {
-      font-size: 4rem;
-    }
+.c-section--404 {
+  .c-icon {
+    font-size: 4rem;
   }
 }
