--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -1,12 +1,28 @@
 {% extends '_html.twig' %}
 
 {% block hero %}
-  {% include 'templates-parts/hero.twig' %}
+  {% include 'template-parts/hero.twig' %}
 {% endblock %}
 
 {% block content %}
   <section class="c-section c-section--home">
-    <h1 class="text-center padding-vertical-3">Title <i class="icon-behance"></i> </h1>
+    <div class="grid-container margin-bottom-2">
+      <h1 class="text-center padding-vertical-3" data-aos="fade-up" data-aos-once="true" data-aos-duration="900">${title} <i class="icon-behance"></i> </h1>
+      <div class="flex-container align-center margin-bottom-1">
+        <button id="control-slider-example-prev" class="c-button bg-pri-color margin-horizontal-1 white">Left</button>
+        <button id="control-slider-example-next" class="c-button bg-pri-color margin-horizontal-1 white">Right</button>
+      </div>
+      <swiper :options="swiperOptions">
+        <swiper-slide v-for="item of [1,2,3,4,5,6]" :key="item.id">
+          <a href="{{theme.link}}/static/images/example.jpg" data-fancybox="gallery-home">
+            <figure class="width-100">
+              <img class="width-100 height-100 of--cover" src="{{theme.link}}/static/images/example.jpg" alt="">
+            </figure>
+          </a>
+        </swiper-slide>
+        <swiper-slide>
+      </swiper>
+    </div>
   </section>
 {% endblock %}
 
