--- a/app/views/page.twig
+++ b/app/views/page.twig
@@ -1,7 +1,7 @@
 {% extends '_html.twig' %}
 
 {% block hero %}
-  {% include 'templates-parts/hero.twig' %}
+  {% include 'template-parts/hero.twig' %}
 {% endblock %}
 
 {% block content %}
