--- a/app/views/template-parts/header-mobile.twig
+++ b/app/views/template-parts/header-mobile.twig
@@ -1,10 +1,10 @@
-<header class="c-header c-header-mobile width-100 padding-bottom-0">
+<header class="c-header c-header-mobile width-100 padding-bottom-0" :class="{ 'c-header-mobile--visible' : isActiveMenu}">
   <div class="grid-container">
     <nav class="c-nav width-100">
       <div class="c-nav__left width-100 flex-container align-center-middle">
         <figure class="c-brand c-brand--normal flex-container align-center-middle">
           <a class="c-brand__link" href="{{ site.url }}">
-            <img class="c-brand__image" src="{{ theme.link }}/static/images/logo.png" alt="Veterinaria Triton - Logo" />
+            <img class="c-brand__image" src="{{ theme.link }}/static/images/logo.png" alt="Panda WP - Logo" />
           </a>
         </figure>       
       </div>
