--- a/src/scss/base/_typo.scss
+++ b/src/scss/base/_typo.scss
@@ -1,12 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?12436493');
+  src: url('../fonts/fontello/fontello.eot?12436493');
   src:
-    url('../fonts/fontello.eot?12436493') format('embedded-opentype'),
-    url('../fonts/fontello.woff2?12436493') format('woff2'),
-    url('../fonts/fontello.woff?12436493') format('woff'),
-    url('../fonts/fontello.ttf?12436493') format('truetype'),
-    url('../fonts/fontello.svg?12436493') format('svg');
+    url('../fonts/fontello/fontello.eot?12436493') format('embedded-opentype'),
+    url('../fonts/fontello/fontello.woff?12436493') format('woff'),
+    url('../fonts/fontello/fontello.ttf?12436493') format('truetype'),
+    url('../fonts/fontello/fontello.svg?12436493') format('svg');
   font-weight: normal;
   font-style: normal;
 }
