--- a/app/views/template-parts/footer.twig
+++ b/app/views/template-parts/footer.twig
@@ -1,6 +1,16 @@
-<footer class="c-footer">
-  <div class="grid-container grid-x align-justify">
-    <p class="margin-0">Made by <a href="#">Panda WP</a></p>
-    <p class="margin-0">© {{ now|date('Y') }} All Rights Reserved</p>
+<footer>
+  <div class="footer_content">
+      <a class="footer_logo" href="">
+          <img src="{{theme.link}}/static/images/logo_rog_footer.svg" alt="">
+      </a>
+      <ul class="footer_sociallist">
+        {% for item in social_menu.items %}          
+          <li>
+            <a href="{{item.link}}" target="_blank">
+              <i class="fab fa-{{item.slug}}"></i>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
   </div>
 </footer>
