--- a/app/views/template-parts/header.twig
+++ b/app/views/template-parts/header.twig
@@ -1,29 +1,48 @@
-<header class="c-header width-100 padding-bottom-0">
-  <div class="grid-container position-relative">
-    <nav class="c-nav width-100">
-      <div class="c-nav__left flex-container align-center-middle">
-        <figure class="c-brand c-brand--normal flex-container align-center-middle">
-          <a class="c-brand__link" href="{{ site.url }}">
-            <img class="c-brand__image" src="{{ theme.link }}/static/images/logo.png" alt="Panda WP - Logo" />
-          </a>
-        </figure>    
-      </div>
-      <div class="c-nav__right">
-        <ul class="c-menu menu flex-container ul-reset">
-          {% for item in primary_menu.items %}
-            <li class="{{ item.class }} {% if 'current-menu-item' in item.class %} activate {% endif %}">
-              <a href="{{ item.link }}" class="position-relative">{{ item.name }}</a>
-            </li>
-          {% endfor %}
-        </ul>  
-        <a href="" class="c-button c-button--primary bg-success w-medium font-sec fs-18 white display-block">
-          <div class="flex-container width-100 height-100 align-center-middle">
-            Wsp
-          </div>
-        </a>
-      </div>      
-    </nav>     
+<nav>
+  <div class="nav_content">
+      <a class="nav_logo" href="{{site.url}}">
+          <img src="{{theme.link}}/static/images/logo_asus.png" alt="">
+      </a>
+
+      <ul class="nav_list">
+          <li>
+              <a href="">Lorem</a>
+          </li>
+          <li>
+              <a href="">Lorem</a>
+          </li>
+          <li>
+              <a href="">Lorem</a>
+          </li>
+
+          <ul class="nav_sociallist mobile">
+            {% for item in social_menu.items %}          
+              <li>
+                <a href="{{item.link}}" target="_blank">
+                  <i class="fab fa-{{item.slug}}"></i>
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+      </ul>
+
+      <ul class="nav_sociallist desktop">
+        {% for item in social_menu.items %}          
+          <li>
+            <a href="{{item.link}}" target="_blank">
+              <i class="fab fa-{{item.slug}}"></i>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+
+
+      <button class="burguer_mobile">
+          <span></span>
+          <span></span>
+          <span></span>
+      </button>
   </div>
-</header>
+</nav>
   
   
