--- a/src/scss/base/_typo.scss
+++ b/src/scss/base/_typo.scss
@@ -1,39 +1,2 @@
-@font-face {
-  font-family: 'fontello';
-  src: url('../fonts/fontello/fontello.eot?12436493');
-  src:
-    url('../fonts/fontello/fontello.eot?12436493') format('embedded-opentype'),
-    url('../fonts/fontello/fontello.woff?12436493') format('woff'),
-    url('../fonts/fontello/fontello.ttf?12436493') format('truetype'),
-    url('../fonts/fontello/fontello.svg?12436493') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"]::before,
-[class*=" icon-"]::before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: 0.2em;
-  text-align: center;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1em;
-  margin-left: 0.2em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-globe::before { content: '\e800'; } /* '' */
-.icon-ok::before { content: '\e801'; } /* '' */
-.icon-right::before { content: '\e802'; } /* '' */
-.icon-facebook::before { content: '\f09a'; } /* '' */
-.icon-github::before { content: '\f09b'; } /* '' */
-.icon-youtube::before { content: '\f16a'; } /* '' */
-.icon-instagram::before { content: '\f16d'; } /* '' */
-.icon-behance::before { content: '\f1b4'; } /* '' */
+@font-face{ font-family: 'Xolonium Regular'; src:url('../fonts/xolonium/xolonium-regular.otf'); }
+@font-face{ font-family: 'Xolonium Bold'; src:url('../fonts/xolonium/xolonium-bold.otf'); }
