--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,648 +1,9 @@
-*{
-  margin:0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Xolonium Regular;
-}
-
-nav{
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  padding: 15px 100px;
-  background: #242424;
-  position: relative;
-  z-index: 500;
-}
-.nav_content{
-  max-width: 1100px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav_logo{
-  width: 150px;
-}
-
-.nav_list{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 0;
-}
-.nav_sociallist{
-  margin-bottom: 0;
-  width: 150px;
-display: flex;
-justify-content: flex-end;
-align-items: center;
-}
-.nav_list li {
-  margin: 0 15px;
-  list-style: none;
-}
-.nav_sociallist li{
-  margin: 0 5px;
-  list-style: none;
-}
-.nav_list li a, .nav_sociallist li a {
-color: #fff;
-text-decoration: none;
-}
-
-.nav_list li a{
-  transition: all 0.5s;
-  color: #C42825;
-  border-bottom: 2px solid transparent;
-
-}
-.nav_list li a:hover, .nav_list li a:active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-.nav_sociallist li a {
-  font-size: 25px;
-}
-
-/* init */
-
-.init {
-  margin-top: -10px;
-}
-.init .swiper-slide > img{
-  width: 100%;
-}
-.init .section_content{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
- justify-content: center;
- padding: 0 100px 70px;
- background: linear-gradient(to bottom, transparent 50%, #000)
-}
-
-.init .inner_content{
-  max-width: 1100px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-direction: column;
-}
-.init_swipper_figure{
-  width: 90px
-}
-.init_swipper_figure > img {
-  width: 100%;
-}
-
-.init_swipper_resume{
-  margin-top: 18px;
-  color: #fff;
-  max-width: 700px;
-  font-size: 18px;
-  text-align: center;
-  line-height: 29px;
-}
-
-.swiper-pagination-bullets{
-  bottom: 28px;
-}
-
-.swiper-pagination-bullet{
-  background:gray;
-}
-
-.swiper-pagination-bullet-active{
-  background: #C42825;
-}
-
-
-/* section form  */
-
-.section_form{
-  background: #242424;
-  padding: 80px 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.section_form .section_content{
-  max-width: 1100px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-
-
-.section_form_video{
-  width: calc(50% - 30px)
-}
-
-.form_container{
-  width: calc(50% - 30px)
-}
-
-
-.form_container_title{
-  color: #C42825;
-  margin-bottom: 17px;
-}
-
-.form_container_text{
-  color: #fff;
-  margin-bottom: 40px;
-  line-height: 29px;
-  font-size: 15px;
-}
-form {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.input_container{
-  width: calc(50% - 15px);
-  margin-bottom: 15px
-}
-
-.input_container input{
-  width: 100%;
-  height: 30px;;
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  color: #fff;
-}
-
-select{
-  display: none;
-}
-
-.input_container.select {
-  position: relative;
-}
-.input_container .head_select{
-  width: 100%;
-  height: 30px;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  color: rgba(255,255,255,0.5);
-  cursor: pointer;
-}
-
-.input_container .body_select{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 30px;
-  background: #000;
-  color: #fff;
-  display: none;
-  z-index: 55;
-}
-.input_container .body_select.open_select{
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.input_container .body_select_option{
-  font-size: 13px;
-  height: 30px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  cursor: pointer;
-color: rgba(255,255,255,0.8);
-padding-left: 7px;
-  
-}
-
-
-.input_container .body_select_option:hover{
-color: rgba(255,255,255,1)
-}
-input:focus, input:active, select:focus, select:active{
+.c-section--home {
   outline: none;
 }
 
-.checkbox_container {
-  width: 100%;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.checkbox_container_check{
-  cursor: pointer;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #C42825;
-  position: relative;
-  margin-right: 10px;
-}
-
-.checkbox_container_check input {
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  position: relative;
-  z-index: 55;
-  cursor: pointer;
-}
-
-.checkbox_container_check_span {
-  position: absolute;
-  top: 25%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
-  background: transparent;
-  transition: all 0.5s;
-}
-
-.checkbox_container_check input:checked + span{
-  background: #C42825
-}
-
-.checkbox_container label {
-color: #fff;
-font-size: 13px;
-margin-bottom: 0;
-}
-
-.checkbox_container label button{
-background: transparent;
-border: none;
-color: #fff;
-outline: none;
-font-size: 13px;
-}
-
-
-.checkbox_container label button:avtive, 
-.checkbox_container label button:focus{
-outline: none;
-}
-
-.button_container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin-top: 40px;
-
-}
-
-.button_container input{
-  &:disabled {
-    cursor: no-drop;
-    opacity: 0.5;
-  }
-}
-
-.button_container button, .button_container input{
-  background: #C42825;
-  color: #fff;
-  padding: 7px 30px;
-  text-transform: uppercase;
-  border: none;
-}
-
-.input_container.valid input {
-  border-bottom-color: rgb(28, 197, 113);
-}
-
-.input_container.valid .head_select {
-  border-bottom-color: rgb(28, 197, 113);
-}
-
-.input_container.file{
-position: relative;
-width: 100%;
-
-margin-top: 18px;
-}
-
-
-.input_container.file input{
-  position: relative;
-  z-index: 55;
-  opacity: 0;
-  }
-
-.input_container.file .shade{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
- 
-  padding-bottom: 8px;
-  font-size: 13px;
-  color: gray;
-  }
-
-.input_container.file .shade .red_span{
-  text-decoration: none;
-  text-overflow: ellipsis;
-  display: block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 240px;
-  height: 38px;
-  border: 2px solid #C42825;
-  padding: 7px 30px;
-  text-align: center;
-}  
-
-.input_container.file .shade .red_span i {
-  margin-right: 7px;
-}
-
-
-.nav_sociallist.desktop{
-  display: flex;
-}
-.nav_sociallist.mobile{
-  display: none;
-}
-.burguer_mobile{
-  display: none
-}
-
-
-footer {
-  background: #000;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  width: 100%;
-  padding: 20px 100px;
-}
-
-.footer_content{
-  max-width: 1100px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer_logo{
-  width: 150px;
-}
-
-.footer_logo img{
-  width: 100%;
-}
-
-
-.footer_sociallist{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  list-style: none;
-  margin-bottom: 0;
-}
-
-.footer_sociallist li {
-  margin-left: 10px;
-}
-.footer_sociallist li a {
-  color: #fff;
-  font-size: 25px;
-}
-.captcha_box{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  /* background: red;; */
-}
-
-@media(max-width:1300px){
-  .section_form_video, .form_container{
-      width: 100%;
-  }
-  .section_form_video{
-      margin-bottom: 90px;
-  }
-
-  .form_container{
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-  }
-  .form_resume{
-      width: calc(40% - 30px)
-  }
-  form{
-      width: 60%;
-  }
-
-  .form_resume.first_line{
-      width: 100%;
-  }
-}
-
-
-@media(max-width:1024px){
-  .section_form_video{
-  margin-bottom: 30px;
-}
-.init_swipper_figure{
-  width: 73px;
-}
-.init_swipper_resume{
-  font-size: 15px;
-}
-
-.init .section_content{
-  padding-bottom: 53px;
-}
-  .form_resume{
-      width: 100%
-  }
-  form{
-      width: 100%;
-  }
- 
-}
-
-@media(max-width:768px){
-  nav{
-      padding: 15px 30px;
-  }
-  .init .section_content{
-      padding: 0 30px 53px;
-  }
-  .nav_list{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      flex-direction: column;
-      display: none;
-      background: #242424;
-      opacity: 0;
-      transition: opacity 0.5s;
-  }
-
-  .nav_list.open{
-      display: flex;
-      opacity: 1;
-  }
-  .nav_list li{
-      margin-top: 15px;
-}
-
-.nav_sociallist.desktop{
-  display: none;
-}
-.nav_sociallist.mobile{
-  display: flex;
-}
-.burguer_mobile{
-  display: block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: none;
-  background: transparent;
-  transition: all 0.5s;
-  outline: none;
-}
-
-.burguer_mobile:active, .burguer_mobile:focus{
-  outline: none;
-}
-.burguer_mobile span{
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background: #fff;
-  left: 0;
-  transition: all 0.5s;
-}
-.burguer_mobile span:nth-child(1){
-  top: 25%;
-}
-.burguer_mobile span:nth-child(2){
-  top: 50%;
-}
-.burguer_mobile span:nth-child(3){
-  top: calc(75% + 1px);
-}
-
-.burguer_mobile.open{
-  transform: rotate(180deg)
-}
-
-.burguer_mobile.open span:nth-child(1){
-  top: 50%;
-  transform: rotate(-45deg)
-}
-.burguer_mobile.open span:nth-child(2){
-  
-  opacity: 0;
-
-  
-}
-.burguer_mobile.open span:nth-child(3){
-  top: 50%;
-  transform: rotate(45deg) 
-}
-
-.nav_logo{
-  position: relative;
-  z-index: 55;
-}
-
-
-footer{
-  padding:20px 30px
-}
-.nav_sociallist.mobile li a{
-  color: #fff;
-}
-
-
-.nav_sociallist{
-  justify-content: center;
-}
-}
-
-@media (max-width:600px){
-  nav{
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-  }
-  .swiper-slide{
-      min-height: 500px;;
-      height:100vh;
-  }
-  .section_form{
-      padding: 50px 30px;
-  }
-
-  .init .swiper-slide > img{
-      object-fit: cover;
-  width: 100%;
-  height: 100%;
-  object-position: 10%;
-  }
-  .input_container{
-      width: 100%;
-  }
-
-  .input_container input, .input_container .head_select{
-    height: 44px;
-  }
-
-  .input_container .head_select{
-      display: flex;
-      justify-content: flex-start;
-      align-items: center
-  }
-  .checkbox_container label, .checkbox_container label button{
-      font-size: 14px;
-  }
-
-  .init .section_content{
-      background: linear-gradient(to bottom, transparent 31%, #000)
-  }
-  .init_swipper_resume{
-      line-height: 24px;
-  }
-}
-
-@media(max-width:378px){
-  .checkbox_container label, .checkbox_container label button{
-      font-size: 10px;
+@include breakpoint(large) {
+  .c-section--home {
+    outline: none;
   }
 }
