--- a/app/views/template-parts/hero.twig
+++ b/app/views/template-parts/hero.twig
@@ -1,2 +1,7 @@
+<Toggle></Toggle>
+
 <!-- Header Stuck -->
-{% include 'template-parts/header.twig' %}
+{% include 'template-parts/header.twig' %} 
+
+<!-- Header Fixed for Mobile -->
+{% include 'template-parts/header-mobile.twig' %}
