Update | All | Version 1.2.0

--- a/app/views/404.twig
+++ b/app/views/404.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <section class="c-section c-section--404" style="background-image: url('')">
+  <section class="c-section c-section--404">
     <div class="grid-container padding-vertical-3">
       <h1 class="c-section-content-title text-center pri-color w-sbold margin-bottom-1">Error 404</h1>
       <div class="c-section-content c-section-content--normal position-relative margin-bottom-3">
