--- a/app/views/_html-head.twig
+++ b/app/views/_html-head.twig
@@ -3,10 +3,10 @@
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="title" content="Emprende Fem" />
-<meta name="description" content="Empoderamiento Financiero Femenino" />
+<meta name="title" content="{{ site.name }}" />
+<meta name="description" content="{{ site.description }}" />
 <meta name="robots" content="index,follow">	
-<meta name="keywords" content="femenino, mujer, mujeres, finanzas, financiero, empoderamiento">
+<meta name="keywords" content="...">
 <link rel="icon" href="{{ theme.link }}/static/images/favicon.png">
 
 {{ function('wp_head') }}
