--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -7,21 +7,12 @@
 {% block content %}
   <section class="c-section c-section--home">
     <div class="grid-container margin-bottom-2">
-      <h1 class="text-center padding-vertical-3" data-aos="fade-up" data-aos-once="true" data-aos-duration="900">${title} <i class="icon-behance"></i> </h1>
-      <div class="flex-container align-center margin-bottom-1">
-        <button id="control-slider-example-prev" class="c-button bg-pri-color margin-horizontal-1 white">Left</button>
-        <button id="control-slider-example-next" class="c-button bg-pri-color margin-horizontal-1 white">Right</button>
+      <h1 class="text-center padding-vertical-3" data-aos="fade-up" data-aos-once="true" data-aos-duration="900">${title} <i class="icon-facebook"></i> </h1>
+      <div class="grid-x grid-margin-x grid-margin-y">
+        <div class="cell medium-6 large-4">
+          {% include "components/article.twig" %}
+        </div>
       </div>
-      <swiper :options="swiperOptions">
-        <swiper-slide v-for="item of [1,2,3,4,5,6]" :key="item.id">
-          <a href="{{theme.link}}/static/images/example.jpg" data-fancybox="gallery-home">
-            <figure class="width-100">
-              <img class="width-100 height-100 of--cover" src="{{theme.link}}/static/images/example.jpg" alt="">
-            </figure>
-          </a>
-        </swiper-slide>
-        <swiper-slide>
-      </swiper>
     </div>
   </section>
 {% endblock %}
