--- a/app/views/_html.twig
+++ b/app/views/_html.twig
@@ -5,13 +5,13 @@
 
     {% block metas %}
       {% include "_html-seo.twig" %}
-      
+
       {# content #}
     {% endblock %}
   </head>
 
   <body>
-    <main id="app" data-site="{{site.url}}" class="c-main">
+    <main id="app" data-site="{{site.url}}" data-theme="{{theme.link}}" class="c-main">
       {% block hero %}
         {# Content #}
       {% endblock %}
@@ -22,7 +22,7 @@
 
       {% block footer %}
         {% include "_html-footer.twig" %}
-        
+
         {# Content #}
       {% endblock %}
     </main>
