--- a/app/views/_html.twig
+++ b/app/views/_html.twig
@@ -19,10 +19,13 @@
       {% block content %}
         {# Content #}
       {% endblock %}
-    </main>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      {% block footer %}
+        {% include "_html-footer.twig" %}
+
+        {# Content #}
+      {% endblock %}
+    </main>
 
     {{ function('wp_footer') }}
   </body>
