--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -7,7 +7,11 @@
 {% block content %}
   <section class="c-section c-section--home">
     <div class="grid-container margin-bottom-2">
-      <h1 class="text-center padding-vertical-3" data-aos="fade-up" data-aos-once="true" data-aos-duration="900">${title} <i class="icon-facebook"></i> </h1>
+      <h1 class="text-center padding-vertical-3" data-aos="fade-up" data-aos-once="true" data-aos-duration="900">
+        ${title} <i class="icon-facebook"></i>
+        <span class="iconify" data-icon="fa:home"></span>
+        <span class="iconify" data-icon="noto:bird"></span>
+      </h1>
       <div class="grid-x grid-margin-x grid-margin-y">
         <div class="cell medium-6 large-4">
           {% include "components/article.twig" %}
